--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-js-snackbar": "^1.0.4",
