--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-h5-audio-player": "^3.0.2",
+    "tachyons": "^4.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-js-snackbar": "^1.0.4",
