--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-h5-audio-player": "^3.0.2",
@@ -21,6 +22,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-share": "^4.1.0",
     "redux": "^4.0.5",
     "tachyons": "^4.11.1"
   },
