--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-h5-audio-player": "^3.0.2",
     "react-js-snackbar": "^1.0.4",
     "react-loader-spinner": "^3.1.14",
+    "react-push-notification": "^1.3.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
