--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-share": "^4.1.0",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "tachyons": "^4.11.1"
   },
   "scripts": {
